# paddle-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/entities/: index.rs
src/entities/address/: address.rs  address_collection.rs  index.rs
src/entities/adjustment/: adjustment.rs  adjustment_collection.rs  adjustment_item.rs  adjustment_item_totals.rs  adjustment_proration.rs  adjustment_time_period.rs  index.rs
src/entities/business/: business.rs  business_collection.rs  contacts.rs  index.rs
src/entities/customer/: credit_balance.rs  customer.rs  customer_balance.rs  customer_collection.rs  index.rs
src/entities/discount/: discount.rs  discount_collection.rs  index.rs
src/entities/event_types/: event_type.rs  index.rs
src/entities/events/: event.rs  event_collection.rs  index.rs
src/entities/notification_settings/: index.rs  notification_settings.rs
src/entities/notifications/: index.rs  notification.rs  notification_collection.rs  notification_log.rs  notification_log_collection.rs  replay_notification.rs
src/entities/payout/: index.rs  payout.rs
src/entities/price/: index.rs  price.rs  price_collection.rs  price_quantity.rs
src/entities/pricing_preview/: index.rs  pricing_preview.rs  pricing_preview_details.rs  pricing_preview_discounts.rs  pricing_preview_line_item.rs
src/entities/product/: index.rs  product.rs  product_collection.rs
src/entities/report/: index.rs  report.rs  report_collection.rs  (+2 more)
src/model/: mod.rs  notification.rs
src/notifications/: mod.rs
src/types/: mod.rs
src/util/: mod.rs  serde.rs
tests/: test_parse.rs
(+284 files in other folders)
