[package]
name = "paddle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
derive_builder = "0.20.0" 
time = { version = "0.3.11", features = ["macros", "serde", "formatting", "parsing"] }

[dev-dependencies]
rstest = "0.22.0"